# Model-Predictive-Control

./: README.md  Session1.py  Session2.py  Session3.py  Session4.py  Session5.py  Session6.py  requirements.txt
Assignment/: Session1.py  Session2.py  Session3.py  Session4.py  Session5.py  Session6.py  assignment4.py  t.py
Assignment/Model Predictive Control - Assignment/: assignment.sty  homework.aux  homework.fdb_latexmk  homework.fls  homework.out  homework.tex
Assignment/given/: parameters.py  template.py
Assignment/given/homework/: animate.py  problem.py
Sessions/Session 4/: session4-Solution.py
Sessions/Session 5/: session5_sol.py
Sessions/Session 6/: session6_sol.py
given/homework/: problem.py
rcracers/: README.md  pyproject.toml
rcracers/rcracers/: __init__.py
rcracers/rcracers/comms/: camera.py  control.py  localization.py  racer.py  transmitter.py
rcracers/rcracers/control/: sigexpand.py  signatures.py  utils.py
rcracers/rcracers/rendering/: core.py  environments.py  objects.py  scenes.py  ui.py
rcracers/rcracers/resources/: __init__.py  core.py  scene.py
rcracers/rcracers/resources/assets/: README.md  meta.json  pyracing.tex
rcracers/rcracers/resources/configs/: camera_parameters.json  positioning_options_green.json  positioning_options_white.json
rcracers/rcracers/resources/scenes/: racetrack.json
rcracers/rcracers/simulator/: __init__.py  core.py  dynamics.py
rcracers/rcracers/utils/: __init__.py  common.py  lqr.py  quadprog.py
rcracers/rcracers/utils/geometry/: __init__.py  ellipsoid.py  plotting.py  polyhedron.py
(+12 files in other folders)
